--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,10 @@ p {
     margin-top: 3rem;
 }
 
+.no__overflow {
+    overflow: hidden;
+}
+
 /* FIXME: Global classes end */
 
 /* TODO: Header starts */
@@ -571,6 +575,74 @@ p {
 }
 
 /* FIXME: Products end*/
+
+/* TODO: Footer starts */
+
+.footer {
+    background: #222;
+    padding: 3rem 2rem;
+    padding-bottom: 1rem;
+}
+
+.footer__logo {
+    width: 8rem;
+    border-radius: 100%;
+}
+
+.footer__content {
+    gap: 1rem;
+    margin-top: 4rem;
+}
+
+.footer__content strong,
+.footer__content h4,
+.footer__content h3,
+.footer__content h2 {
+    color: var(--white);
+    font-size: 1.4rem;
+    font-weight: 450;
+}
+.footer__social {
+    font-size: 2.5rem;
+}
+
+.instagram {
+    color:  #bc2a8d;
+    margin-left: 1rem;
+}
+
+.face {
+    color: dodgerblue;
+    margin-left: 1rem;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+}
+
+.footer__content {
+    width: 100%;
+    max-width: 88rem;
+}
+
+.copy__container {
+    margin-top: 4rem;
+}
+
+.copy__container p {
+    font-size: 1.2rem;
+    color: var(--white);
+}
+
+.copy__container {
+    display: flex;
+    justify-content: center;
+    border-top: 1px solid var(--white);
+    padding-top: 4rem;
+}
+
+/* FIXME: Footer ends */
 
 /* TODO: Media queries start */
 
